[metadata]
name = source
version = 0.0.1
description = Multi-platform, multi-protocol source code tracking system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/source
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9
